<resources>
    <string name="app_name">伍陆棋</string>
    <string name=".MainActivity">伍陆棋</string>
    <string name=".SplashActivity">伍陆棋</string>
    <string name="Load.....">伍陆棋</string>
    <string name="五六棋">Five_two</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="用户名">手机号</string>
    <string name="密码">密码</string>
    <string name="确认密码">确认密码</string>
    <string name="Name">邮箱</string>
    <string name="Name1">性别</string>
    <string name="Name2">年龄</string>
    <string name="Name3">昵称</string>
    <string name="Name4">地区</string>
    <string name="Name5">验证码</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
