<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/back3">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/用户名"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:inputType="date"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_acquire"
        android:layout_toStartOf="@+id/button_acquire" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/密码"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:inputType="textPassword"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/identify"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/确认密码"
        android:textSize="21sp"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:inputType="textPassword"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:ems="10"
        android:hint="@string/Name"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/nickname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:hint="@string/Name3"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/confirmpassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:hint="@string/Name2"
        android:layout_above="@+id/area"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <EditText
        android:id="@+id/area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:hint="@string/Name4"
        android:layout_above="@+id/button_register"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/identify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#EEC900"
        android:textColor="#EEC900"
        android:textSize="21sp"
        android:hint="@string/Name5"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_acquire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="获取验证码"
        android:textColor="#8B1A1A"
        android:layout_above="@+id/identify"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/acq"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/resl"
        android:text="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=" 性别"
        android:textSize="21sp"
        android:gravity="center"
        android:textColor="#EEC900"
        android:layout_above="@+id/age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id='@+id/radiogroup2'
        android:layout_marginRight="38dp"
        android:layout_marginEnd="38dp"
        android:layout_above="@+id/age"
        android:layout_alignRight="@+id/button_acquire"
        android:layout_alignEnd="@+id/button_acquire">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/age"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="   帅哥"
            android:textColor="#EEC900"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/radioButton"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_toEndOf="@+id/radioButton"
            android:layout_toRightOf="@+id/radioButton"
            android:text="   美女"
            android:textColor="#EEC900"
            android:textSize="18sp" />

    </RadioGroup>


</RelativeLayout>
